# Humanoid_2018

./: CMakeLists.txt  README.md
DynaController/: CMakeLists.txt
DynaController/Atlas_Controller/: Atlas_InvKinematics.cpp  Atlas_interface.cpp  Atlas_interface.hpp
DynaController/Atlas_Controller/AtlasTestConfig/: PLANNER_velocity_reversal.yaml
DynaController/Atlas_Controller/ContactSet/: DoubleContact.cpp
DynaController/Atlas_Controller/CtrlSet/: ConfigBodyCtrl.cpp  JPosTrajPlanningCtrl.cpp  TransitionConfigCtrl.cpp
DynaController/Mercury_Controller/: Mercury_DynaControl_Definition.h  Mercury_StateEstimator.cpp  Mercury_StateEstimator.hpp  Mercury_interface.cpp  Mercury_interface.hpp
DynaController/Mercury_Controller/CtrlSet/: ConfigBodyCtrl.cpp  ContactTransConfigCtrl.cpp  JPosTargetCtrl.cpp  JPosTrajPlanningCtrl.cpp  JPosTrajPlanningCtrl.hpp  TransitionConfigCtrl.cpp
DynaController/Valkyrie_Controller/: Valkyrie_InvKinematics.cpp  Valkyrie_InvKinematics.hpp  Valkyrie_StateEstimator.cpp  Valkyrie_StateProvider.hpp  Valkyrie_interface.cpp  Valkyrie_interface.hpp
ExternalSource/: CMakeLists.txt
RobotSystems/: CMakeLists.txt
RobotSystems/Atlas/: Atlas_Definition.h  Atlas_Kin_Model.cpp  Atlas_Model.cpp
RobotSystems/Mercury/: mercury.urdf
RobotSystems/Valkyrie/: Valkyrie_Definition.h
Simulator/: CMakeLists.txt
Simulator/srSimulator/: CMakeLists.txt  srconfig.h.cmake
Simulator/srSimulator/Renderer/: CMakeLists.txt  ModelCollada.cpp  ModelCollada.h  ModelMesh.cpp  ModelMesh.h  SimpleRenderer.cpp  SimpleRenderer.h
WBC/WBDC_Relax/: CMakeLists.txt
(+47 files in other folders)
